--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box;}
       body { font: 13px Helvetica, Arial; }
+      #alert-typing { background: #a9e2f3; padding: 10px 10px 10px 10px; position: fixed; bottom: 39px; width: 100%; height: 30px; color: #84848484; }
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
       form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; color: #fff }
@@ -16,6 +17,7 @@
   <body>
     <h1>Omnom ChatRoom</h1>
     <ul id="messages"></ul>
+    <div id="alert-typing">is typing...</div>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
@@ -32,6 +34,22 @@
         console.log('received', msg);
         $('#messages').append($('<li>').text(msg));
       });
+      $('#alert-typing').hide();
+      socket.on('typing', function(){
+        $('alert-typing').show();
+	startTimedCount();
+      });
+      function startTimedCount(){
+	$('#alert-typing').show();
+	console.log("someone typing");
+        setTimeout(function(){
+          $('#alert-typing').hide();
+        }, 400);
+      }
+      document.getElementById('m').onkeydown = function(){ 
+	socket.emit('typing', 'true');
+      } 
+
     </script>
   </body>
 </html>
