--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box;}
       body { font: 13px Helvetica, Arial; }
-      #alert-typing { background: #a9e2f3; padding: 10px 10px 10px 10px; position: fixed; bottom: 39px; width: 100%; height: 30px; color: #84848484; }
+      #alert-typing { display: none; background: #a9e2f3; padding: 10px 10px 10px 10px; position: fixed; bottom: 39px; width: 100%; height: 30px; color: #84848484; }
+      #alert-exit { display: none; background: #a9e2f3; padding: 10px 10px 10px 10px; position: fixed; bottom: 78px; width: 100%; height: 30px; color: #84848484; }
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
       form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; color: #fff }
@@ -17,6 +18,7 @@
   <body>
     <h1>Omnom ChatRoom</h1>
     <ul id="messages"></ul>
+    <div id="alert-exit">someone left.</div>
     <div id="alert-typing">is typing...</div>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
@@ -35,15 +37,18 @@
         $('#messages').append($('<li>').text(msg));
       });
       $('#alert-typing').hide();
+      $('#alert-exit').hide();
       socket.on('typing', function(){
-        $('alert-typing').show();
-	startTimedCount();
+	startTimedCount($('#alert-typing'));
       });
-      function startTimedCount(){
-	$('#alert-typing').show();
+      socket.on('exit', function(){
+	startTimedCount($('#alert-exit'));
+      });
+      function startTimedCount(elem){
+	elem.show();
 	console.log("someone typing");
         setTimeout(function(){
-          $('#alert-typing').hide();
+          elem.hide();
         }, 400);
       }
       document.getElementById('m').onkeydown = function(){ 
