--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box;}
       body { font: 13px Helvetica, Arial; }
+      #alert-joined { display: none; background: #a9e2f3; padding: 10px 10px 10px 10px; position: fixed; bottom: 117px; width: 100%; height: 30px; color: #84848484; }
       #alert-typing { display: none; background: #a9e2f3; padding: 10px 10px 10px 10px; position: fixed; bottom: 39px; width: 100%; height: 30px; color: #84848484; }
       #alert-exit { display: none; background: #a9e2f3; padding: 10px 10px 10px 10px; position: fixed; bottom: 78px; width: 100%; height: 30px; color: #84848484; }
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
@@ -18,6 +19,7 @@
   <body>
     <h1>Omnom ChatRoom</h1>
     <ul id="messages"></ul>
+    <div id="alert-joined">someone joined.</div>
     <div id="alert-exit">someone left.</div>
     <div id="alert-typing">is typing...</div>
     <form action="">
@@ -38,13 +40,17 @@
       });
       $('#alert-typing').hide();
       $('#alert-exit').hide();
+      $('#alert-joined').hide();
+      socket.on('joined', function(){
+        startTimedDisplay($('#alert-joined'));
+      });
       socket.on('typing', function(){
-	startTimedCount($('#alert-typing'));
+	startTimedDisplay($('#alert-typing'));
       });
       socket.on('exit', function(){
-	startTimedCount($('#alert-exit'));
+	startTimedDisplay($('#alert-exit'));
       });
-      function startTimedCount(elem){
+      function startTimedDisplay(elem){
 	elem.show();
 	console.log("someone typing");
         setTimeout(function(){
