cleaned up server logging

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5p 10px; }
       #messages li:nth-child(odd) { background: #eee; }
-      #roster-list { list-style-type: none; margin: 0; padding: 10px 10px; }
-      #roster-list a { cursor: pointer; border-radius: 3px; background: #ccffff;margin: 5px 10px 5px 10px; padding: 5px 5px; }
+      #roster-list { list-style-type: none; margin: 0; padding: 10px 10px 10px 0px; }
+      #roster-list a { cursor: pointer; border-radius: 3px; background: #ccffff;margin: 5px 10px 5px 0px; padding: 5px 5px; }
       #roster-list a#active { background: ##FFEB99; font-weight: bold; } 
       #ind-active { display: none; float: left; }
       #chat-intro { padding: 10px 10px; }
-      #ind-active-chat { border-radius: 3px; background: #FFEB99; margin: 5px 10px 5px 10px; padding: 5px 5px; font-weight: bold; }
+      #ind-active-chat { border-radius: 3px; background: #FFEB99; margin: 5px 10px 5px 0px; padding: 5px 5px; font-weight: bold; }
     
     </style>
   </head>
