--- a/index.html
+++ b/index.html
@@ -8,31 +8,30 @@
       #alert-joined { display: none; background: #a9e2f3; padding: 10px 10px 10px 10px; position: fixed; bottom: 117px; width: 100%; height: 30px; color: #84848484; }
       #alert-typing { display: none; background: #a9e2f3; padding: 10px 10px 10px 10px; position: fixed; bottom: 39px; width: 100%; height: 30px; color: #84848484; }
       #alert-exit { display: none; background: #a9e2f3; padding: 10px 10px 10px 10px; position: fixed; bottom: 78px; width: 100%; height: 30px; color: #84848484; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; color: #fff }
+      form { background: #efefef; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      form button { min-width: 133px; background: rgb(130, 224, 255); border: none; padding: 10px; color: #fff; }
+      form input { border: 0; padding: 10px; width: 80%; width: calc(100% - 133px);  }
       #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5p 10px; }
+      #messages li { padding: 5px 10px; margin: 5px; border-radius: 2px; color: #666666; }
       #messages li:nth-child(odd) { background: #eee; }
       #roster-list { list-style-type: none; margin: 0; padding: 10px 10px 10px 0px; }
-      #roster-list a { cursor: pointer; border-radius: 3px; background: #ccffff;margin: 5px 10px 5px 0px; padding: 5px 5px; }
-      #roster-list a#active { background: ##FFEB99; font-weight: bold; } 
+      #roster-list a { cursor: pointer; border-radius: 2px; background: #75D1FF; margin: 5px 10px 5px 0px; padding: 5px 5px; color: #fff; }
       #ind-active { display: none; float: left; }
-      #chat-intro { padding: 10px 10px; }
-      #ind-active-chat { border-radius: 3px; background: #FFEB99; margin: 5px 10px 5px 0px; padding: 5px 5px; font-weight: bold; }
+      #chat-intro { padding: 10px 10px; background: #E6E6E6; }
+      #ind-active-chat { border-radius: 2px; background: #99CC00; margin: 5px 10px 5px 0px; padding: 5px 5px; color: #fff; }
     
     </style>
   </head>
   <body>
    <div id="chat-intro">
       <div id="ind-active">
-        Active:
+	<p style="color:#fff;">Active</p>
         <div id="ind-active-chat">
          none
         </div>
       </div>
       <div id="roster-menu">
-        <p>Click to join</p>
+        <p style="color:#fff;">Other Rooms</p>
         <ul id="roster-list"></ul>
       </div>
     </div>
